tests/baselines/reference/classSideInheritance1.errors.txt
classSideInheritance1.ts(12,3): error TS2576: Property 'bar' does not exist on type 'A'. Did you mean to access the static member 'A.bar' instead?
classSideInheritance1.ts(13,3): error TS2576: Property 'bar' does not exist on type 'C2'. Did you mean to access the static member 'C2.bar' instead?


==== classSideInheritance1.ts (2 errors) ====
    class A {
      static bar(): string {
         return "";
        }
        foo(): number { return 1; }
    }
     
    class C2 extends A {}
    
    var a: A;
    var c: C2;
    a.bar(); // static off an instance - should be an error
      ~~~
!!! error TS2576: Property 'bar' does not exist on type 'A'. Did you mean to access the static member 'A.bar' instead?
    c.bar(); // static off an instance - should be an error
      ~~~
!!! error TS2576: Property 'bar' does not exist on type 'C2'. Did you mean to access the static member 'C2.bar' instead?
    A.bar(); // valid
    C2.bar(); // valid